Fix z-index for wiki commons hover state

--- a/src/components/AuthorInfo.module.scss
+++ b/src/components/AuthorInfo.module.scss
@@ -57,7 +57,7 @@
     display: flex;
     inset: 0;
     background-color: rgba(255, 255, 255, 0);
-    z-index: 10;
+    z-index: 1;
     transition: background-color 0.3s ease-in-out;
 
     &:hover {
